# package_template

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  changelog.md  conf.py  index.md  requirements.txt
docs/api/: index.md  index.rst
docs/examples/: GALLERY_HEADER.rst  README.md  index.md  plot_basic.py
docs/user_guide/: index.md  installation.md  usage.md
src/package_template/: __init__.py  _version.py  example.py
tests/: test_example.py
